[package]
name = "todoist-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3"
http = "1.3.1"
octocrab = "0.43.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
